# Performance-Preview

./: .gitignore  README.md
api/: .env  .env.template  .pyproject.toml.un~  Dockerfile  README.md  dependencies.py  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 1022cd6b3045_initial.py  1a82bc1b8f7c_init.py  222be77c22d0_.py  61f9cf9ce6f8_init.py  6a0902f5eccd_update_1_1.py  777405713a34_add_results_table.py  7e06c95882ec_.py  8dc29ea6bc15_.py  9569a3f5f515_init.py  df97d096656c_.py  fb41a8ccb21a_initial.py
api/crud/: employee.py  goal.py  respondent.py  task.py  user.py
api/models/: answer.py  answer_for_potential.py  employee.py  goal.py  goal_respondents.py  potential.py  question.py  respondent.py  result.py  review.py  task.py  user.py
api/routers/: auth.py  employee.py  goal.py  manage_goals.py  manage_tasks.py  respondent.py  task.py  token.py
api/schemas/: auth.py  goal.py  manage_goals.py  respondent.py  task.py
api/utils/: auth.py  check_token.py  enums.py  transaction.py
frontend/: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js
frontend/src/lib/components/: login-form.svelte  role-form.svelte  signup-form.svelte
frontend/src/lib/gateways/: auth.ts
frontend/src/lib/schemas/: auth.ts
frontend/src/lib/store/: auth.ts
frontend/src/lib/utils/: auth.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/signin/: +page.server.ts  +page.svelte
frontend/src/routes/signup/: +page.svelte  (+1 more)
frontend/static/: robots.txt
(+9 files in other folders)
