[project]
name = "api"
version = "0.1.0"
description = "API for wink Performance-Review system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "uvicorn>=0.38.0",
    "psycopg2>=2.9.11",
    "pwdlib[argon2]>=0.2.1",
    "pydantic>=2.12.3",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.27",
    "alembic>=1.17.0",
]
